# Quantitative-Trading

./: .clangd  .gitignore  Makefile  README.md  app.py  compile_commands.json  dashboard.py  patch_backtesting.py  requirements.txt  scratch.py  strategy_correlation_engine.py
alpha_discovery/: factor_zoo.py  ml_signals.py  orthogonalization.py  statistics.py  strategy_utils.py
backtesting_engine/: backtesting.py  event_engine.py  strategy_runner.py  tca_model.py  walk_forward.py
config/: settings.py
core/: math_utils.py
data/: AAL_1mo.parquet  AAPL_1d.parquet  AAPL_1h.parquet  AAPL_1mo.parquet  AAP_1mo.parquet  AA_1mo.parquet  ABBV_1mo.parquet  ABNB_1mo.parquet  ABT_1mo.parquet  ACGL_1mo.parquet  ACN_1mo.parquet  ADBE_1mo.parquet  ADCT_1mo.parquet  ADI_1mo.parquet  ADM_1mo.parquet  ADP_1mo.parquet  ADSK_1mo.parquet  ADT_1mo.parquet  AEE_1mo.parquet  AEP_1mo.parquet  AES_1mo.parquet  AFL_1mo.parquet  AIG_1mo.parquet  AIV_1mo.parquet  AIZ_1mo.parquet  AJG_1mo.parquet  AKAM_1mo.parquet  ALB_1mo.parquet  ALGN_1mo.parquet  ALK_1mo.parquet  ALLE_1mo.parquet  ALL_1mo.parquet  AMAT_1mo.parquet  AMCR_1mo.parquet  AMD_1mo.parquet  AME_1mo.parquet  AMGN_1mo.parquet  AMG_1mo.parquet  AMP_1mo.parquet  AMTM_1mo.parquet  (+631 more)
data_collection/: web_scraping.py
data_ingestion/: data.py  data_store.py  (+3 more)
execution_core/: CMakeLists.txt
execution_core/.cache/clangd/index/: bindings.cpp.AB343DA20E07482C.idx  order_manager.cpp.10DE2682E82D8425.idx  order_manager.hpp.5BE476159D54EDD3.idx
execution_core/include/: order_manager.hpp
execution_core/src/: bindings.cpp  order_manager.cpp
(+149 files in other folders)
